--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/immage_common"]
+[submodule "src/image_common"]
 	path = src/image_common
 	url = https://github.com/ros-perception/image_common.git
