gate detection using detecto and ros node for dataset generation from rosbags

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 camera/bags/
 camera/pooltest_bags/
 camera/notebook/
-camera/camera/frames/
-camera/camera/gate.mp4
-camera/camera/output.mp4
-camera/camera/output1.mp4
-camera/camera/output2.mp4
+camera/camera/__pycache__
+camera/camera/weights/
 __pycache__
